# python-dio-challenges

./: 01_creating_a_banking_system.py  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
02_banking_system_optimization/: main.py  main_en.py
03_banking_system_poo/: main.py  models.py
04_decorators_iterators_generators/: main.py  models.py
docker/: Dockerfile.devcontainer  docker-compose.yaml
store/: .env.example  README.md  STOP  pyproject.toml
store/.devcontainer/: devcontainer.json  docker-compose.yml
store/docker/: Dockerfile.devcontainer  docker-compose.yaml
store/store/: main.py
store/store/controllers/: product.py
store/store/core/: config.py
store/store/schemas/: product.py
store/store/usecases/: product.py
store/tests/: conftest.py  factories.py
store/tests/controllers/: test_product.py
store/tests/schemas/: test_product.py
store/tests/usecases/: test_product.py
workoutapi/: alembic.ini  pyproject.toml
workoutapi/.devcontainer/: devcontainer.json  docker-compose.yml
workoutapi/alembic/: env.py
workoutapi/alembic/versions/: f8280be9fc03_init_db.py
workoutapi/docker/: Dockerfile.devcontainer  docker-compose.yaml
workoutapi/workoutapi/: main.py  routers.py
workoutapi/workoutapi/atleta/: controller.py  models.py  schema.py
workoutapi/workoutapi/categorias/: controller.py  models.py  schemas.py
workoutapi/workoutapi/centro_treinamento/: controller.py  models.py  schemas.py
workoutapi/workoutapi/contrib/: schemas.py
